--- a/ForexMarket/Views/Home/CreditApplication.cshtml
+++ b/ForexMarket/Views/Home/CreditApplication.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ForexMarket.Models.CreditApplication
+@inject ForexMarket.Repository.IRepository.IAuthorizer authorizer
 
 <form method="post">
     <div class="container">
@@ -98,15 +99,18 @@
                         <span class="text-danger" asp-validation-for="PostalCode"></span>
                     </div>
                 </div>
-                <div class="form-group row">
-                    <div class="col-9 offset-3">
-                        <div class="row">
-                            <div class="col-6">
-                                <button type="submit" class="btn btn-info form-control">Submit Application</button>
+                @if (authorizer.IsAuthorize()) {
+                    <div class="form-group row">
+                        <div class="col-9 offset-3">
+                            <div class="row">
+                                <div class="col-6">
+                                    <button type="submit" class="btn btn-info form-control">Submit Application</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                }
+                
             </div>
         </div>
     </div>
