Add protector attribute to action level.

--- a/ForexMarket/Views/Home/CreditApplication.cshtml
+++ b/ForexMarket/Views/Home/CreditApplication.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ForexMarket.Models.CreditApplication
-@inject ForexMarket.Repository.IRepository.IAuthorizer authorizer
+@inject ForexMarket.Services.IAuthorizer authorizer
 
 <form method="post">
     <div class="container">
